# maidmarianapi

./: LICENSE.txt  MANIFEST  README.txt  maidmarian.py  setup.cfg  setup.py
maidmarianapi/: __init__.py
maidmarianapi.egg-info/: PKG-INFO  SOURCES.txt
scr/: setup.py
