[metadata]
name = maidmarianapi
version = 0.0.1
author = LMP
author_email = masterlau4@hotmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LMPGitHubShare/maidmarianapi
project_urls =
    Bug Tracker = https://github.com/LMPGitHubShare/maidmarianapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = maidmarianapi